Removed old manually added connectors Made connectors take specific spool types (Needs more work)

--- a/src/main/resources/assets/ccawires/lang/en_us.json
+++ b/src/main/resources/assets/ccawires/lang/en_us.json
@@ -106,7 +106,7 @@
 	"statusbar.ccawires.wire.exists": "Wire connection already exists",
 	"statusbar.ccawires.wire.no_connection": "Wire not connected here",
 	"statusbar.ccawires.wire.invalid": "Invalid connection",
-	"statusbar.ccawires.wire.requires_high_current": "This connection requires a high current wire",
+	"statusbar.ccawires.wire.mismatched_wire": "This connector requires a different wire tier",
 
 	"block.ccawires.huge_connector": "Huge Connector",
 	"block.ccawires.huge_connector.tooltip": "CONNECTOR",
